syntax = "proto3";

option go_package = "github.com/beam-cloud/beam/proto";

package gateway;

service GatewayService {
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {}
  rpc HeadObject(HeadObjectRequest) returns (HeadObjectResponse) {}
  rpc PutObject(PutObjectRequest) returns (PutObjectResponse) {}
}

message AuthorizeRequest {}

message AuthorizeResponse {
  bool ok = 1;
  string context_id = 2;
  string new_token = 3;
  string error_msg = 4;
}

message ObjectMetadata {
  string name = 1;
  int64 size = 2;
}

message HeadObjectRequest { string hash = 1; }

message HeadObjectResponse {
  bool ok = 1;
  bool exists = 2;
  string object_id = 3;
  ObjectMetadata object_metadata = 4;
  string error_msg = 5;
}

message PutObjectRequest {
  bytes object_content = 1;
  ObjectMetadata object_metadata = 2;
  string hash = 3;
  bool overwrite = 4;
}

message PutObjectResponse {
  bool ok = 1;
  string object_id = 2;
  string error_msg = 3;
}